--- a/src/pages/css/HeaderPublico.css
+++ b/src/pages/css/HeaderPublico.css
@@ -34,6 +34,17 @@ header .Logo{
    margin-right: auto;
    padding: 10px 10px;
 }
+.headercliente{
+   width: 100%;
+   height: 80px;
+   background: #4387f4; 
+}
+.headercliente .Logo{
+   height: 60px;
+   margin-right: auto;
+   padding: 10px 10px;
+   align-items: center;
+}
 nav{
    text-align: right;
    padding: 30px 50px 0 0;
